[package]
name = "stm32f1"
version = "0.1.0"
authors = ["Jamil Ahmed <jamil.ahmed.ja28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.5.6"
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "0.3.5"
nb = "1.0.0"
heapless = "0.5.5"


[dependencies.stm32f1xx-hal]
version = "0.2.0"
features = ["stm32f103", "rt"]

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.2"
